Korjattiin syntymäpäiväilmoituksien käännös

--- a/Finnish/main/Calendar.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Calendar.apk/res/values-fi-rFI/strings.xml
@@ -82,15 +82,15 @@
   <string name="birthday_event_description_a_week_later">Ensiviikolla</string>
   <string name="birthday_event_description_day_after_tomorrow">Ylihuomenna</string>
   <string name="birthday_event_description_day_before_yesterday">Toissapäivänä</string>
-  <string name="birthday_event_description_default">"%1$s's %2$s %3$s %4$s"</string>
-  <string name="birthday_event_description_special">"%1$s on %2$s's %3$s %4$s %5$s"</string>
+  <string name="birthday_event_description_default">Henkilön %1$s %2$s %3$s %4$s</string>
+  <string name="birthday_event_description_special">%1$s jäljellä henkilön %2$s %3$s %4$s %5$s</string>
   <string name="birthday_event_description_today">Tänään</string>
   <string name="birthday_event_description_tomorrow">Huomenna</string>
   <string name="birthday_event_description_yesterday">Eilen</string>
   <string name="birthday_notification_text_days_later">%1$s päivää jäljellä %4$s (%5$s)</string>
   <string name="birthday_notification_text_today">Älä unohda onnitella heitä.</string>
-  <string name="birthday_notification_title_days_later">"%1$s's %2$s on tulossa."</string>
-  <string name="birthday_notification_title_today">"%1$s's %3$s"</string>
+  <string name="birthday_notification_title_days_later">Henkilön %1$s %2$s on tulossa.</string>
+  <string name="birthday_notification_title_today">Henkilön %1$s %3$s</string>
   <string name="birthday_notification_type_term_lunar"/>
   <string name="birthday_saved">Syntymäpäivä tallennettu</string>
   <string name="birthday_term">Syntymäpäivä</string>
