Korjattiin käännösvirhe ilmoituksien torkutuksessa

--- a/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
@@ -795,7 +795,7 @@ Olet myös yhteydessä VPN-palvelimeen, joka voi valvoa verkon käyttöäsi."</s
      <string name="snooze_option_2_hour">2 tuntia</string>
      <string name="snooze_option_30_min">30 minuuttia</string>
      <string name="snooze_undo">KUMOA</string>
-     <string name="snoozed_for_time">Torkutettu %1$s ajaksi</string>
+     <string name="snoozed_for_time">Torkutettu %1$s</string>
      <string name="speed_bump_explanation">Vähemmän tärkeät ilmoitukset alla</string>
      <string name="ssl_ca_cert_warning">"Verkkoa saatetaan
 valvoa"</string>
