--- a/Finnish/main/SecurityCenter.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/SecurityCenter.apk/res/values-fi-rFI/strings.xml
@@ -1202,7 +1202,7 @@ Operaattori saattaa veloittaa sinua lisämaksuista, jos käytät mobiilidataa uu
   <string name="main_daily_package">Päiväkohtainen datapaketti</string>
   <string name="main_indicator_title">Aktivointi</string>
   <string name="main_leisure_remained">Hiljaisen ajan dataa jäljellä</string>
-  <string name="main_month_total_used">Käytetty tässä kuussa</string>asd
+  <string name="main_month_total_used">Käytetty tässä kuussa</string>
   <string name="main_month_used">Datapaketti</string>
   <string name="main_no_info">Ei tietoja</string>
   <string name="main_normal_data_usage">Käytetty mobiilidata</string>
