--- a/Finnish/main/Browser.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Browser.apk/res/values-fi-rFI/strings.xml
@@ -18,24 +18,23 @@
   <!-- miui 10 muutos valmis -->
 
 
-  <string name="abc_action_bar_home_description">Siirry aloitussivulle</string>
+  <string name="abc_action_bar_home_description">Siirry etusivulle</string>
   <string name="abc_action_bar_up_description">Siirry ylös</string>
   <string name="abc_action_menu_overflow_description">Lisää</string>
   <string name="abc_action_mode_done">Valmis</string>
-  <string name="abc_action_mode_select_all">Valitse kaikki</string>
   <string name="abc_activity_chooser_view_see_all">Näytä kaikki</string>
   <string name="abc_activitychooserview_choose_application">Valitse sovellus</string>
   <string name="abc_capital_off">POIS KÄYTÖSTÄ</string>
   <string name="abc_capital_on">KÄYTÖSSÄ</string>
   <string name="abc_search_hint">Haku…</string>
   <string name="abc_searchview_description_clear">Tyhjennä kysely</string>
-  <string name="abc_searchview_description_query">Hakukysely</string>
+  <string name="abc_searchview_description_query">Hakulauseke</string>
   <string name="abc_searchview_description_search">Haku</string>
   <string name="abc_searchview_description_submit">Lähetä kysely</string>
   <string name="abc_searchview_description_voice">Puhehaku</string>
-  <string name="abc_shareactionprovider_share_with">Jaa</string>
+  <string name="abc_shareactionprovider_share_with">Jakaminen:</string>
   <string name="abc_shareactionprovider_share_with_application">Jaa sovelluksessa %s</string>
-  <string name="abc_toolbar_collapse_description">Collapse</string>
+  <string name="abc_toolbar_collapse_description">Kutista</string>
   <string name="accept_cookies_confirm_message">Jotkus sivut saattaa käyttäytyä omituisesti, jos poistat tämän ominaisuuden käytöstä.</string>
   <string name="accessibility_button_clear">Tyhjennä teksti</string>
   <string name="account_prifix">Tili:</string>
