--- a/Finnish/main/Music.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Music.apk/res/values-fi-rFI/strings.xml
@@ -1,5 +1,22 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <string name="abc_action_bar_home_description">Siirry etusivulle</string>
+  <string name="abc_action_bar_up_description">Siirry ylös</string>
+  <string name="abc_action_menu_overflow_description">Lisää</string>
+  <string name="abc_action_mode_done">Valmis</string>
+  <string name="abc_activity_chooser_view_see_all">Näytä kaikki</string>
+  <string name="abc_activitychooserview_choose_application">Valitse sovellus</string>
+  <string name="abc_capital_off">POIS KÄYTÖSTÄ</string>
+  <string name="abc_capital_on">KÄYTÖSSÄ</string>
+  <string name="abc_search_hint">Haku…</string>
+  <string name="abc_searchview_description_clear">Tyhjennä kysely</string>
+  <string name="abc_searchview_description_query">Hakulauseke</string>
+  <string name="abc_searchview_description_search">Haku</string>
+  <string name="abc_searchview_description_submit">Lähetä kysely</string>
+  <string name="abc_searchview_description_voice">Puhehaku</string>
+  <string name="abc_shareactionprovider_share_with">Jakaminen:</string>
+  <string name="abc_shareactionprovider_share_with_application">Jaa sovelluksessa %s</string>
+  <string name="abc_toolbar_collapse_description">Kutista</string>
   <string name="account_and_cloud">Tili</string>
   <string name="action_item_add">Lisää kohteeseen</string>
   <string name="action_item_add_song">Lisää soittolistalle</string>
@@ -73,10 +90,6 @@
   <string name="backup_song_title">Valitse varmuuskopioitavat kappaleet</string>
   <string name="bluetooth_device">Bluetooth äänilaite</string>
   <string name="browser_error">Toistaiseksi ei käytettävissä, yritä myöhemmin uudelleen</string>
-  <string name="btn_earlier_items">Lataa viimeaikaiset viestit</string>
-  <string name="btn_earlier_items_progress">Ladataan viimeaikaisia viestejä…</string>
-  <string name="btn_more_items">Lataa lisää viestejä</string>
-  <string name="btn_more_items_progress">Ladataan lisää viestejä…</string>
   <string name="buffering">Puskuroidaan…</string>
   <string name="button_cancel_download">Peruuta</string>
   <string name="button_download_now">Lataa nyt</string>
@@ -170,6 +183,9 @@
   <string name="dialog_insufficient_space_on_external">Latausta ei voi suorittaa loppuun. SD-kortilla ei ole tarpeeksi tilaa.</string>
   <string name="dialog_media_not_found">Ei voi ladata. Ulkoinen media ei ole käytettävissä.</string>
   <string name="dialog_queued_body">Tämä tiedosto on latausjonossa.</string>
+  <string name="dialog_renew_failure">Pahoittelut, toiminto epäonnistui</string>
+  <string name="dialog_renew_positive_text">KYLLÄ, HALUAN ROKKAA KUIN AMMATTILAINEN</string>
+  <string name="dialog_renew_success">Kiitos vahvistuksestasi</string>
   <string name="dialog_song_sort_type">Lajittele</string>
   <string name="dialog_song_sort_type_name">Nimen mukaan</string>
   <string name="dialog_song_sort_type_playing_times">Soittokertojen mukaan</string>
@@ -212,6 +228,8 @@
   <string name="download_confirm_text">Mi Musiikki lataa ja asentaa \"%s\"</string>
   <string name="download_connect_wifi_dialog_message">Tarvitset Wi-Fi-verkon ladataksesi tämän kappaleen. Yhdistetäänkö nyt?</string>
   <string name="download_connect_wifi_dialog_title">Yhdistä Wi-Fi-verkkoon</string>
+  <string name="download_dialog_fail">Lataaminen epäonnistui</string>
+  <string name="download_dialog_success">Ladattiin onnistuneesti</string>
   <string name="download_done_btn">Ladattu</string>
   <string name="download_error">Epäonnistui</string>
   <string name="download_error_insufficient_space">Tallennustilaa ei ole riittävästi</string>
@@ -259,10 +277,12 @@
   <string name="downloading_apk">Ladataan… Katso edistyminen Ilmoitusalueelta.</string>
   <string name="downloading_empty">Tyhjä</string>
   <string name="downloading_pause_apk">Pysäytetty. Jatka latausta Ilmoitusalueelta.</string>
+  <string name="due_date">Eräpäivä: %s</string>
   <string name="edit_playlist_info">Muokkaa soittolistan tietoja</string>
   <string name="empty_page_no_album">Ei albumeita.</string>
   <string name="empty_page_no_artist">Ei artisteja.</string>
   <string name="enabled">Käytössä</string>
+  <string name="enjoy_hungama_pro">Nauti Hungama PRO:sta</string>
   <string name="enter_garbage_clean">Puhdista sisäinen tallennustila.</string>
   <string name="eq_auto">Mukautettu</string>
   <string name="eq_blues">Blues</string>
@@ -282,8 +302,6 @@
   <string name="eq_preset_select">Valitse esiasetus</string>
   <string name="eq_rock">Rock</string>
   <string name="equalizer">Taajuuskorjain</string>
-  <string name="err_media_handle">Pahoittelut, mediaa ei voitu hakea. Yritä myöhemmin uudelleen.</string>
-  <string name="err_offline_on_playback">Pahoittelut, sinun täytyy olla online-tilassa toistaaksesi tämän median.</string>
   <string name="error_forbidden">Tilisi ongelmien takia synkronointi on otettu pois käytöstä.</string>
   <string name="error_not_acceptable">Synkronointi ei ole käytössä.</string>
   <string name="error_title">Mi Tiliin ei voi synkronoida</string>
@@ -380,6 +398,7 @@
   <string name="global_search_title_prenatal">Raskaudenaikainen musiikki</string>
   <string name="global_search_title_radar">Musiikin tunnistus</string>
   <string name="handle_later">Ei nyt</string>
+  <string name="hd_quality_audio">HD-äänenlaatu</string>
   <string name="headset_and_audio_effect_category">Kuulokkeet &amp; äänitehosteet</string>
   <string name="headset_and_audio_effect_summary">Kuulokkeet &amp; taajuuskorjain</string>
   <string name="headset_and_audio_effect_title">Kuulokkeet &amp; äänitehosteet</string>
@@ -391,9 +410,11 @@
   <string name="home_tab_online">Online-musiikki</string>
   <string name="hot_icon_in_fast_indexer">H</string>
   <string name="hungama">Hungama</string>
+  <string name="hungama_batch_download_alert_summary">Vain PRO-jäsenet voi ladata useita kappaleita. Hankitaanko PRO-jäsenyys nys?</string>
   <string name="hungama_category_playlist">Soittolista</string>
   <string name="hungama_category_radio">Radio</string>
   <string name="hungama_category_video">Video</string>
+  <string name="hungama_free_download_out_summary">Et voi ladata enempää ilmaisia kappaleita. Hankitaanko PRO-jäsenyys ladataksesi rajattoman määrän kappaleita?</string>
   <string name="hungama_pro">Hungama Pro</string>
   <string name="hungama_subscribe_message">Osta PRO-jäsenyys lataaksesi korkealaatuista musiikkia.</string>
   <string name="hungama_subscribe_positive_button">Osta PRO-jäsenyys</string>
@@ -408,6 +429,10 @@
   <string name="impunity_declaration_summary">Näytä Palveluehdot aina, kun Musiikki-sovellus käynnistetään</string>
   <string name="impunity_declaration_title">Palveluehdot</string>
   <string name="in_searching_please_wait">Etsitään…</string>
+  <string name="individuation_card_login_button">Kirjaudu sisään</string>
+  <string name="individuation_card_login_message">Kirjaudu sisään löytääksesi lisää rakastamiasi kappaleita</string>
+  <string name="individuation_card_title">Sinulle</string>
+  <string name="individuation_cart_login_title">Haluatko nähdä lisää suosituksia?</string>
   <string name="individuation_recommend_message">Ota suositukset käyttöön, jotta saat henkilökohtaisia suosituksia.</string>
   <string name="individuation_recommend_switch_message">Tämän palvelun poistaminen käytöstä vaikuttaa henkilökohtaiseen Mi Musiiki-palveluihin. Poistetaanko käytöstä siitä huolimatta?</string>
   <string name="individuation_recommend_title">Suositukset</string>
@@ -456,8 +481,6 @@
   <string name="menu_title_pause_all">Pysäytä kaikki</string>
   <string name="menu_title_resume_all">Aloita kaikki</string>
   <string name="message_delete_playlist">Poistetaanko soittolista %s?</string>
-  <string name="message_timestamp">d.M.</string>
-  <string name="message_ws_response_error">Ongelma pyyntösi käsittelyssä ja/tai palvelimen vastauksessa</string>
   <string name="metered_alert">Tiedonsiirtovaroitus</string>
   <string name="metered_alert_msg">Käytät mobiilidataa kappaleiden toistamiseen. Toistetaanko siitä huolimatta?</string>
   <string name="metered_alert_msg_with_data">Sinulla on %s mobiilidataa jäljellä. Käytetäänkö mobiilidataa kappaleiden toistamiseen?</string>
@@ -604,6 +627,7 @@
   <string name="priority_storage">Käytä ulkoista SD-korttia</string>
   <string name="priority_storage_summary">Lataa automaattisesti ulkoiselle SD-kortille jos käytettävissä</string>
   <string name="privacy_policy">Tietosuojakäytäntö</string>
+  <string name="pro_member">PRO-Jäsen</string>
   <string name="project_device">Mi Puhelin</string>
   <string name="prompt_grant_write_settings_permission">Salli järjestelmän asetuksien muuttaminen</string>
   <string name="pulluprefreshrecyclerview_loading_error">Lataaminen epäonnistui</string>
@@ -625,6 +649,8 @@
   <string name="recommended_no_file_size_download_in_mobile">Käytetäänkö mobiilidata-yhteyttäsi tämän tiedoston lataamiseen?</string>
   <string name="remove">Poista</string>
   <string name="remove_download">Poista</string>
+  <string name="renew_dialog_title">"Liity Pro-jäseneksi
+Ole onnellinen"</string>
   <string name="repeat_all_notif">Toistetaan uudelleen kaikki kappaleet.</string>
   <string name="repeat_current_notif">Toistetaan uudelleen nykyinen kappale.</string>
   <string name="request_share_info">Odota hetki…</string>
@@ -650,6 +676,7 @@
   <string name="search_hint">Hae artistia, kappaletta, albumia, suosittele</string>
   <string name="search_history_clear_all">Tyhjennä</string>
   <string name="search_instant_online_music">Online</string>
+  <string name="search_menu_title">Haku</string>
   <string name="search_songs_count">Kappaleet: %d</string>
   <string name="search_title">Haku</string>
   <string name="second_symbol">s</string>
@@ -665,7 +692,6 @@
   <string name="select_three_languages">Voit valita vähintään 3 kieltä</string>
   <string name="selected_count">Valittuna %1$d/%2$d</string>
   <string name="send_to_title">Lähetä kohteeseen (%1$s)</string>
-  <string name="server_connection_failed">Pahoittelut, sinun täytyy olla online-tilassa käyttääksesi tätä ominaisuutta</string>
   <string name="server_error">Tapahtui virhe. Odota minuutti tai kaksi ja yritä uudelleen.</string>
   <string name="service_and_settings">Palvelu ja asetukset</string>
   <string name="session_create_error">Palvelin palautti ISTUNNON LUONTIVIRHE-koodin, ota yhteyttä SDK-kehittäjiin!</string>
@@ -709,6 +735,7 @@
   <string name="sleep_mode_canceled">Nukkuma-tila poistettu käytöstä</string>
   <string name="sleep_mode_summary">Lopeta soitin tietyn ajan jälkeen</string>
   <string name="sleep_mode_title">Nukkuma-ajastin</string>
+  <string name="sliding_pro_center">PRO Keskus</string>
   <string name="song_exist_in_playlist">Tämä kappale on jo jonossa</string>
   <string name="song_info">Kappaleen tiedot</string>
   <string name="song_is_empty">Kappaleen nimi ei voi olla tyhjä.</string>
@@ -766,7 +793,6 @@
   <string name="title_online_fm_recommend">Suosittu FM</string>
   <string name="title_online_recommend">Suositut soittolistat</string>
   <string name="title_search_history">Hakuhistoria</string>
-  <string name="to_mi_pay">Mi Krediittiä</string>
   <string name="toast_download_error_by_count_limit">Olet käyttänyt tämän kuukauden latauksien määrän.</string>
   <string name="toast_download_error_by_not_login">Kirjaudu Mi Tilille ja yritä uudelleen.</string>
   <string name="toast_download_error_by_vip_required">Hanki Premium-tason Kappalepaketti ladataksesi tämän kappaleen.</string>
@@ -780,6 +806,8 @@
   <string name="ultra_high_quality">Korkein</string>
   <string name="unknown_album_name">Tuntematon albumi</string>
   <string name="unknown_artist_name">Tuntematon artisti</string>
+  <string name="unlimited_downloads">Rajattomat lataukset</string>
+  <string name="unlimited_offline_songs">Rajattomat offline-kappaleet</string>
   <string name="update_now">PÄIVITÄ NYT</string>
   <string name="upgrade_music">Päivitä Musiikki</string>
   <string name="upgrade_music_message">Paketti on valmis. Päivitä käynnistämällä uudelleen.</string>
@@ -790,16 +818,8 @@
   <string name="video_replay_btn">Toista uudelleen</string>
   <string name="video_retry_btn">Yritä uudelleen</string>
   <string name="view_album">Näytä albumi</string>
-  <string name="vip_after_tomorrow_auto_renew_message">Musiikkitilauksesi uusitaan automaattisesti ylihuomenna illalla. Varmista, että sinulla on tarpeeksi Mi Krediittejä tililläsi suorittaaksesi maksun.</string>
-  <string name="vip_after_tomorrow_renew_message">Et voi suoratoistaa korkean laadun musiikkia, mutta jotkut kappaleet ovat saatavilla normaalilla laadulla.</string>
-  <string name="vip_auto_renew_message">Musiikkitilauksesi uusitaan automaattisesti tänä iltana. Varmista, että tililläsi on tarpeeksi Mi Krediittejä tämän maksun suorittamiseen.</string>
-  <string name="vip_auto_renew_title">Tilauksen uusiminen</string>
-  <string name="vip_renew_message">Et tule pystymään suoratoistamaan korkean laadun musiikkia, mutta jotkut kappaleet ovat saatavilla normaalilla laadulla.</string>
-  <string name="vip_renew_title">Tilaus vanhentunut</string>
   <string name="vip_required">Hanki Premium-tason Kappalepaketti toistaaksesi tämän kappaleen. Kappale ohitettiin.</string>
-  <string name="vip_required_with_song">Hanki Premium-tason Kappalepaketti toistaaksesi %s. Kappale ohitettiin.</string>
-  <string name="vip_tomorrow_auto_renew_message">Musiikkitilauksesi uusitaan automaattisesti huomenna illalla. Varmista, että sinulla on tarpeeksi Mi Krediittejä tililläsi suorittaaksesi maksun.</string>
-  <string name="vip_tomorrow_renew_message">Et voi suoratoistaa korkean laadun musiikkia, mutta jotkut kappaleet ovat saatavilla normaalilla laadulla.</string>
+  <string name="vip_required_with_song">%s on saatavilla vain PRO-jäsenille. Kappale ohitettiin.</string>
   <string name="wifi_required_body" formatted="false">"Yhdistä Wi-Fi-verkkoon ladataksesi tämän %s tiedoston. 
 
 Napauta %s aloittaaksesi latauksen seuraavalla kerralla, kun olet yhteydessä Wi-Fi-verkkoon."</string>
