--- a/Finnish/main/CleanMaster.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/CleanMaster.apk/res/values-fi-rFI/strings.xml
@@ -408,7 +408,7 @@
   <string name="notify_when">Saa ilmoitus, kun roskien koko yltää 100Mt</string>
   <string name="ok">OK</string>
   <string name="onekeyclean_boost_available">%s käytettävissä</string>
-  <string name="onekeyclean_boost_cleaned">%s Tyhjennetty</string>
+  <string name="onekeyclean_boost_cleaned">Tyhjennettiin %s</string>
   <string name="onekeyclean_boosted_title">Tyhjennettiin onnistuneesti</string>
   <string name="onekeyclean_boosting_title">Parannetaan nopeutta</string>
   <string name="onekeyclean_card_btn">Puhdista nyt</string>
