--- a/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
@@ -403,6 +403,7 @@ prioriteetti"</string>
      <string name="keyguard_accessibility_sim_puk_area">SIM-koodin PUK-koodin alue</string>
      <string name="keyguard_carrier_default">Ei palvelua</string>
      <string name="keyguard_charged">Ladattu</string>
+     <string name="keyguard_charging_back_to_lockscreen">Takaisin lukitusnäytölle</string>
      <string name="keyguard_charging_info_battery_used_time_text">Akkukäytöllä</string>
      <string name="keyguard_charging_info_click_to_detail">Näytä tiedot</string>
      <string name="keyguard_charging_info_drained_power_percent_text">Kuluttanut</string>
@@ -424,6 +425,7 @@ prioriteetti"</string>
      <string name="keyguard_left_mi_wallet">Mi Wallet</string>
      <string name="keyguard_left_remotecentral">Kalenteri</string>
      <string name="keyguard_left_smarthome">Yhteystiedot</string>
+     <string name="keyguard_left_torch">Taskulamppu</string>
      <string name="keyguard_left_view_lock_wallpaper">Musiikki</string>
      <string name="keyguard_low_battery">Yhdistä laturisi.</string>
      <string name="keyguard_missing_sim_instructions">Aseta SIM-kortti.</string>
