--- a/Finnish/main/Weather.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Weather.apk/res/values-fi-rFI/strings.xml
@@ -131,7 +131,7 @@ Vedä alaspäin päivittääksesi tai tarkasta verkkoasetukset"</string>
   <string name="hourly_forcast_now">Nyt</string>
   <string name="hourly_forecast_date">d.M.</string>
   <string name="hourly_forecast_title_24_hours_desc">24-tuntinen ennustus</string>
-  <string name="hourly_forecast_title_hourly_desc">tuntikohtainen ennustus</string>
+  <string name="hourly_forecast_title_hourly_desc">Tuntikohtainen ennustus</string>
   <string name="hourly_forecast_title">Tuntikohtainen ennustus</string>
   <string name="index_item_experience_now">Asenna nyt</string>
   <string name="index_item_install_now">Asenna nyt</string>
